--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -3,6 +3,15 @@
     width: 300px;
     height: 100vh;
     padding-top: 20px;
+    h2 {
+        margin-top: 20px;
+        font-size: 1.5rem;
+    }
+    h3 {
+        margin-top: 50px;
+        font-size: 1.2rem;
+        margin-left: 15px;
+    }
 }
 
 .sidebar__profile-picture {
