--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -1,38 +1,78 @@
 .sidebar {
-    background: white;
-    width: 300px;
+    text-align: center;
+    color: white;
+    background: #2a3f54;
+    width: 70px;
     height: 100vh;
     padding-top: 20px;
-    h2 {
-        margin-top: 20px;
-        font-size: 1.5rem;
+    padding-left: 0;
+    .title {
+        text-align: center;
     }
-    h3 {
-        margin-top: 50px;
-        font-size: 1.2rem;
-        margin-left: 15px;
+    h1 {
+        font-size: 1.5rem;
+        display: none;
+        padding-left: 10px;
     }
 }
 
 .sidebar__profile-picture {
-    padding-top: 20px;
-    text-align: center;
-    .sidebar__profile-picture--grey-border {
-        border-radius: 50%;
-        width: 110px;
-        height: 110px;
-        background: #d0d0d0;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%);
-        position: relative;
-    }
+    padding-top: 40px;
+    font-size: 12px;
     img {
+        background: white;
+        padding: 4px;
         position: relative;
-        top: 50%;
-        transform: translateY(-50%);
         border-radius: 50%;
-        width: 100px;
-        height: 100px;
+        width: 60px;
+        height: 60px;
+    }
+}
+
+.navbar {
+    padding: 0;
+    margin-top: 25px;
+    ul {
+        margin: auto;
+        li {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            &:hover {
+                color: darken($color: white, $amount: 20%);
+                cursor: pointer;
+            }
+            a {
+                font-size: 11px;
+                display: block;
+                padding-left: 0;
+            }
+        }
+    }
+}
+
+//Media queries
+
+@media (min-width: 762px) {
+    .sidebar {
+        text-align: left;
+        width: 250px;
+        h1 {
+            display: inline;
+        }
+    }
+    .sidebar__profile-picture {
+        padding-left: 10px;
+    }
+    .navbar {
+        padding-left: 10px;
+        ul {
+            margin: 0;
+            li {
+                a {
+                    display: inline;
+                    padding-left: 15px;
+                }
+            }
+        }
     }
 }
