--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   margin: 0;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Roboto", sans-serif;
   background: #ebeff2;
 }
