Added form for adding a stock

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,4 @@
 For more information, please visit http://getbem.com/ */
 
 @import './components/sidebar/Sidebar.scss';
+@import './components/stocks/Stocks.scss';
