Updated sidebar styling

--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -35,18 +35,20 @@
     ul {
         margin: auto;
         width: 100%;
-        li {
+        a {
+            color: white;
+            font-size: 12px;
+            padding-left: 0;
             width: 100%;
-            padding: 10px 0 10px 10px;
+            display: block;
+            padding: 10px 0;
+            text-decoration: none;
             &:hover {
                 background: darken($color: #2a3f54, $amount: 2%);
                 cursor: pointer;
             }
-            a {
-                color: white;
-                font-size: 11px;
+            svg {
                 display: block;
-                padding-left: 0;
             }
         }
     }
@@ -66,13 +68,17 @@
         padding-left: 10px;
     }
     .navbar {
-        padding-left: 10px;
         ul {
             margin: 0;
             li {
                 a {
-                    display: inline;
-                    padding-left: 15px;
+                    display: block;
+                    padding: 15px;
+                    width: 100%;
+                    svg {
+                        display: inline;
+                        margin-right: 10px !important;
+                    }
                 }
             }
         }
