--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -53,6 +53,7 @@
                 }
                 svg {
                     display: block;
+                    margin: auto;
                 }
             }
         }
