--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ For more information, please visit http://getbem.com/ */
     justify-content: center;
     display: flex;
     flex-direction: column;
-    .main-section__back-button {
+    .main-section__button {
         color: grey;
         &:hover {
             color: darken($color: rgb(82, 82, 82), $amount: 10%);
