--- a/src/components/stocks/Stocks.scss
+++ b/src/components/stocks/Stocks.scss
@@ -40,10 +40,11 @@
     }
 }
 
-.stock-list-view {
+.stock-card-view {
     padding: 20px;
     box-shadow: 2px 2px 6px grey;
     text-transform: capitalize;
+    background: white;
 }
 
 a {
